@@ -3,6 +3,7 @@
 - Added: Teamkill forgive system (only available when mission revive and revive spectating is on)
 - Added: Dynamic AI recruitment (1 player d_max_ai recruitable, more players less AI recruitable, over 20 players, no AI recruitment possible; d_with_ai values 3 and 4)
 - Added: Players are now kicked back to the lobby if they destroy vehicles at base (no session ban, just kick back to slot selection)
+- Added: Params d_with_airtaxi (With AI air taxi (coop version only)) and d_with_airdrop (With air drop) to enable and disable AI air taxi and AI air drop (both enabled by default)
 - Fixed: Unconscious state and dialog doesn't end if a player has to go to jail
 - Fixed: Jail escape counter was increased every second instead of just once per jail time
 - Fixed: Destroying a vehicle of the other player side caused a script error in the TT version
