@@ -138,6 +138,10 @@
 > If disabled players can not change their client viewdistance<br/>
 #### **d_playerspectateatbase / Player can spectate other players at base flag:**
 > Default: 0 (Yes, enabled; 1 or No too disable)<br/>
+#### **d_with_airtaxi / With AI air taxi (coop version only):**
+> Default: 0 (Yes, enabled; 1 or No too disable)<br/>
+#### **d_with_airdrop / With air drop:**
+> Default: 0 (Yes, enabled; 1 or No too disable)<br/>
 #### **d_with_ai / With AI recruitment:**
 > Default: 1<br/>
 > When AI recruitment is enabled all players can mark artillery targets, call in artillery, call in a drop aircraft, call in CAS. They are also all engineers and medics.</br>
