@@ -370,3 +370,7 @@ STR_DOM_MISSIONSTRING_2066
 STR_DOM_MISSIONSTRING_2067
 STR_DOM_MISSIONSTRING_2068
 STR_DOM_MISSIONSTRING_2069
+STR_DOM_MISSIONSTRING_2070
+STR_DOM_MISSIONSTRING_2071
+STR_DOM_MISSIONSTRING_2072
+STR_DOM_MISSIONSTRING_2073
