@@ -176,3 +176,7 @@ STR_DOM_MISSIONSTRING_2065
 STR_DOM_MISSIONSTRING_2066
 STR_DOM_MISSIONSTRING_2068
 STR_DOM_MISSIONSTRING_2069
+STR_DOM_MISSIONSTRING_2070
+STR_DOM_MISSIONSTRING_2071
+STR_DOM_MISSIONSTRING_2072
+STR_DOM_MISSIONSTRING_2073
