@@ -1,2 +1,6 @@
 STR_DOM_MISSIONSTRING_2068
 STR_DOM_MISSIONSTRING_2069
+STR_DOM_MISSIONSTRING_2070
+STR_DOM_MISSIONSTRING_2071
+STR_DOM_MISSIONSTRING_2072
+STR_DOM_MISSIONSTRING_2073
